Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2025/10/08:
- TestEngine: IM_CHECK_FLOAT_xx compare operators using epsilon now display input values
  in the log instead of the fabs(a-b) result.
- TestEngine: added IM_CHECK_DOUBLE_EQ, IM_CHECK_DOUBLE_NE check macros.
- TestEngine: *BREAKING* renamed check macros as the suffix was unnecessary.
    IM_CHECK_FLOAT_EQ_EPS --> IM_CHECK_FLOAT_EQ
    IM_CHECK_FLOAT_NE_EPS --> IM_CHECK_FLOAT_NE.
  Kept inline redirection macros.
- TestEngine: *BREAKING* obsoleted IM_CHECK_FLOAT_NEAR / IM_CHECK_FLOAT_NEAR_NO_RET
  check macros which were ambiguous. Kept inline redirection macros.
    IM_CHECK_FLOAT_NEAR(A, B, 100.0f) --> IM_CHECK(fabs(a - b) <= 100.0f)

2025/10/01:
- TestEngine: fixed recovering from situation where TestFunc changed current context.

2025/09/22:
- TestEngine: added test_io.ConfigLogToFunc hook to serially log all output (rather than
  peeking into the individual log output of each test).
- TestEngine: using ImGuiTestFlags_NoRecoveryWarnings also mute log.

2025/09/09:
- TestEngine: fixed ctx->ComboXXX functions for cases where the Combo selectables are
  using ImGuiSelectableFlags_NoAutoClosePopups or setting ImGuiItemFlags_AutoClosePopups=false.

2025/08/22:
- TestEngine: fixed issues interaction with clipped table headers.
- TestEngine: added ctx->ScrollToPos(), ScrollToPosX(), ScrollToPosY() helpers.

2025/08/11:
- TestEngine: error when it is detected that main imgui library has not been
  compiled with IMGUI_ENABLE_TEST_ENGINE. (#80)
- TestEngine: detect mismatching build issue when ImGui compiled struct layout does not
  match one seen by test engine.

2025/04/24:
- TestEngine: fixed crash/issue in capture tool.

2025/03/17: